avoid shifting close button left if not end of row

--- a/src/vs/workbench/browser/parts/editor/media/tabstitlecontrol.css
+++ b/src/vs/workbench/browser/parts/editor/media/tabstitlecontrol.css
@@ -277,6 +277,10 @@
 .monaco-workbench .part.editor > .content .editor-group-container > .title .tabs-container > .tab.sizing-fit .monaco-icon-label,
 .monaco-workbench .part.editor > .content .editor-group-container > .title .tabs-container > .tab.sizing-fit .monaco-icon-label > .monaco-icon-label-container {
 	overflow: visible; /* fixes https://github.com/microsoft/vscode/issues/20182 */
+}
+
+.monaco-workbench .part.editor > .content .editor-group-container > .title .tabs-container > .tab.sizing-fit.last-in-row:not(:last-child) .monaco-icon-label,
+.monaco-workbench .part.editor > .content .editor-group-container > .title .tabs-container > .tab.sizing-fit.last-in-row:not(:last-child) .monaco-icon-label > .monaco-icon-label-container {
 	flex: none; /* fixes https://github.com/microsoft/vscode/issues/126532 */
 }
 
